# Nex

./: antilinkconf.json  antimspconf.json  antispamconf.json  badges.json  bdays.txt  classes.py  config.json  config.py  configg.json  date.db  global_chat.json  inviteData.db  main.py  main1.py  mainbank.json  nopre.json  noprefix.json  pinglimit.json  prefix.json  prefixes.json  pyproject.toml  randx.json  replit.nix  replit_zip_error_log.txt  settings.py  utilities.py  vanity.json  vanityroles.json  verification.json  voice.db  webserver.py  whitelisted.json
.codesandbox/: tasks.json
Data/: Devlopers.py
Data/databases/: leveling.json  reaction_roles.json
Helpers/: data.py
Tools/: utils.py
config/: commands.json  quickcmds.json
core/: Context.py  apolex.py
ext/: config.json
settings/: commands.json  todo.json
views/: help.py
